--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -36,7 +36,7 @@ log4j.logger.org.apache.parquet=ERROR
 log4j.logger.parquet=ERROR
 
 # our stuff
-log4j.logger.com.starschema.jampi=TRACE
+log4j.logger.com.starschema.jampi=DEBUG
 
 # SPARK-9183: Settings to avoid annoying messages when looking up nonexistent UDFs in SparkSQL with Hive support
 log4j.logger.org.apache.hadoop.hive.metastore.RetryingHMSHandler=FATAL
